# safe-ibkr-mcp

./: .gitignore  DISCLAIMER.md  LICENSE  README.md  pyproject.toml
docs/: 2026-05-29-ibkr-mcp-design.md
docs/plans/: 2026-05-29-m1-walking-skeleton.md  2026-05-31-errors-mapping.md  2026-05-31-m2-safety-layer.md  2026-05-31-m3a-free-reads.md  2026-05-31-m3b-market-data.md  2026-05-31-m4-write-tools.md
ibkr_mcp/: __init__.py  __main__.py
ibkr_mcp/core/: account.py  connection.py  contracts.py  errors.py  market_data.py  models.py  orders.py
ibkr_mcp/core/safety/: guardrails.py  idempotency.py  killswitch.py
ibkr_mcp/mcp/: config.py  server.py  tools_read.py  tools_write.py
tests/: test_account.py  test_architecture.py  test_config.py  test_connection.py  test_contracts.py  test_errors.py  test_guardrails.py  test_idempotency.py  test_integration_paper.py  test_killswitch.py  test_market_data.py  test_models.py  test_orders_read.py  test_orders_write.py  test_server.py  test_tools_read.py  test_tools_write.py
