[project]
name = "ibkr-mcp-guarded"
version = "0.0.1"
description = "Guarded Interactive Brokers MCP server — safe LLM trading access"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "Franck Nganiet" }]
keywords = ["ibkr", "interactive-brokers", "mcp", "trading", "ib-async", "llm"]
dependencies = [
    "ib_async>=2.0.1",
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
ibkr-mcp-guarded = "ibkr_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ibkr_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires a running IBKR paper Gateway (deselect with -m 'not integration')",
]

[tool.ruff]
target-version = "py311"
line-length = 100
